samples/_failures_safe/1761278473_e3b08a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2fe3918.c: In function ‘main’:
./samples/SAFE/__tmp_c2fe3918.c:124:9: error: expected expression at end of input
  124 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_c2fe3918.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2fe3918.c:124:9: error: expected declaration or statement at end of input
